--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,3 +10,17 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  
+  # Firebase (Google)
+  firebase_core: ^2.3.0
+  firebase_auth: ^4.1.4
+  firebase_messaging: ^14.1.2
+  cloud_firestore: ^4.1.0
+  cloud_functions: ^4.0.10
+
+  # Community
+  cached_network_image: ^3.2.3
+  flutter_platform_widgets: ^3.2.0
+
+  # Also Empathetech
+  empathetech_flutter_ui: ^1.1.2
