--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,10 +8,9 @@ environment:
   flutter: ">=1.17.0"
 
 dependencies:
+  # Google
   flutter:
     sdk: flutter
-  
-  # Firebase (Google)
   firebase_core: ^2.3.0
   firebase_auth: ^4.1.4
   firebase_messaging: ^14.1.2
@@ -19,8 +18,11 @@ dependencies:
   cloud_functions: ^4.0.10
 
   # Community
+  empathetech_flutter_ui:
+    path: ../empathetech_flutter_ui
   cached_network_image: ^3.2.3
   flutter_platform_widgets: ^3.2.0
 
-  # Also Empathetech
-  empathetech_flutter_ui: ^1.1.2
+dev_dependencies:
+  dependency_validator: ^3.0.0
+  
