--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,17 +11,18 @@ dependencies:
   # Google
   flutter:
     sdk: flutter
-  firebase_core: ^2.3.0
   firebase_auth: ^4.1.4
   firebase_messaging: ^14.1.2
   cloud_firestore: ^4.1.0
   cloud_functions: ^4.0.10
 
   # Community
-  empathetech_flutter_ui:
-    path: ../empathetech_flutter_ui
+  # empathetech_flutter_ui:
+  #   path: ../empathetech_flutter_ui
+  empathetech_flutter_ui: ^1.1.3
   cached_network_image: ^3.2.3
   flutter_platform_widgets: ^3.2.0
+  email_validator: ^2.1.17
 
 dev_dependencies:
   dependency_validator: ^3.0.0
