--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,9 +17,9 @@ dependencies:
   cloud_functions: ^4.0.10
 
   # Community
-  # empathetech_flutter_ui:
-  #   path: ../empathetech_flutter_ui
-  empathetech_flutter_ui: ^1.1.4
+  empathetech_flutter_ui:
+    path: ../empathetech_flutter_ui
+  # empathetech_flutter_ui: ^1.1.4
   cached_network_image: ^3.2.3
   flutter_platform_widgets: ^3.2.0
   email_validator: ^2.1.17
