--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,6 +3,9 @@ description: Firebase API code for Empathetech's Smoke Signal
 version: 1.0.1
 repository: https://github.com/Empathetech-LLC/empathetech_ss_api
 
+# Un-comment me during dev!
+publish_to: none
+
 environment:
   sdk: '>=2.19.6 <3.0.0'
   flutter: ">=1.17.0"
@@ -17,12 +20,15 @@ dependencies:
   cloud_functions: ^4.0.10
 
   # Community
-  empathetech_flutter_ui:
-    path: ../empathetech_flutter_ui
-  # empathetech_flutter_ui: ^1.1.4
   cached_network_image: ^3.2.3
   flutter_platform_widgets: ^3.2.0
   email_validator: ^2.1.17
+
+  # Switch-comment me during dev!
+  empathetech_flutter_ui:
+    path: ../empathetech_flutter_ui
+  # empathetech_flutter_ui: ^1.1.4
+  
 
 dev_dependencies:
   dependency_validator: ^3.0.0
