--- a/.github/workflows/flutter-analyze.yaml
+++ b/.github/workflows/flutter-analyze.yaml
@@ -8,11 +8,17 @@ jobs:
   build:
     name: Engage
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
+
       - name: Set up Flutter
-        uses: subosito/flutter-action@v1
-      - run: flutter pub get
-      - name: Analyze Dart
-        uses: zgosalvez/github-actions-analyze-dart@v2
+        uses: subosito/flutter-action@v2
+        with:
+          channel: 'stable'
+
+      - name: Analyze package
+        run: |
+          flutter pub get
+          flutter analyze
