--- a/.github/FUNDING.yaml
+++ b/.github/FUNDING.yaml
@@ -1,1 +1,8 @@
-custom: "https://www.paypal.com/donate/?hosted_button_id=NGEL6AB5A6KNL"
+custom:
+  - https://gofund.me/c047d07e
+  - https://www.paypal.com/donate/?hosted_button_id=NGEL6AB5A6KNL
+  - https://venmo.com/empathetech
+  - https://cash.app/$empathetech
+patreon: empathetech
+buy_me_a_coffee: empathetech
+ko_fi: empathetech
