--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: empathetech_ss_api
-description: "Needs new name"
+description: "Needs a new description"
 version: 2.0.0
 repository: https://github.com/Empathetech-LLC/empathetech_ss_api
 
