--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -9,7 +9,7 @@ linter:
     avoid_types_as_parameter_names: true
     hash_and_equals: true
     test_types_in_equals: true
-    use_build_context_synchronously: false
+    use_build_context_synchronously: true
 
     # Style rules
     always_declare_return_types: true
