--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -18,6 +18,8 @@ linter:
     package_names: true
     prefer_asserts_with_message: true
     prefer_conditional_assignment: true
+    prefer_const_constructors: true
+    prefer_const_declarations: true
     prefer_final_fields: true
     prefer_final_in_for_each: true
     prefer_final_locals: true
